--- a/myaddons/purchase_track/views/views.xml
+++ b/myaddons/purchase_track/views/views.xml
@@ -143,8 +143,10 @@
                                     <field name="confirm_date" attrs="{'readonly':[('editable', '=', False)]}" />
                                     <!--<field name="confirm_date"  attrs="{'readonly':['|',('editable', '=', False), ('purchase_track_item.need_date', '=', False)]}" />-->
                                     <field name="remarks" />
-                                    <field name="create_uid" readonly="1" />
-                                    <field name="create_date" readonly="1" />
+                                    <field name="create_uid" readonly="1" string="创建人"/>
+                                    <field name="create_date" readonly="1" string="创建日期"/>
+                                    <field name="write_date" readonly="1" string="修改日期"/>
+                                    <field name="write_uid" readonly="1" string="修改人"/>
                                     <field name="editable"  invisible="1"/>
                                 </tree>
                             </field>
